# serde-bin-prot

./: Cargo.toml  README.md  expand.rs  test-layout.json
.github/workflows/: build-and-test.yml
src/: de.rs  error.rs  integers.rs  lib.rs  loose_deserializer.rs  nat0.rs  read_ext.rs  ser.rs  write_ext.rs
src/array/: mod.rs
src/integers/: integer.rs  mod.rs  nat0.rs
src/value/: index.rs  mod.rs  visitor.rs
src/value/de/: mod.rs  visitor.rs
src/value/layout/: mod.rs  traverse.rs
tests/: arrays.rs  bool.rs  char.rs  common.rs  compound_types.rs  floats.rs  integers.rs  integers_repr_tests_64bit.ml  integers_repr_tests_64bit.rs  integers_test_cases.rs  layouts.rs  list.rs  non_integers_repr.rs  option.rs  pair.rs  strings.rs  struct.rs  triple.rs
