[package]
name = "serde-bin-prot"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
num = "0.4.0"
serde = { version = "1.0.125" }
shrinkwraprs = "0.3.0"

[dev-dependencies]
difference = "2.0.0"
regex = { version = "1" }
