[package]
name = "serde-bin-prot"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Willem Olding <willemolding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4.3", default-features = false}
num = "0.4.0"
serde = { version = "1.0.125", default-features = false }
thiserror = "1.0.24"

[dev-dependencies]
difference = "2.0.0"
maplit = "1.0.2"
regex = { version = "1" }
serde = { version = "1.0.125", features = ["derive"] }

[features]
default = ["std"]
std = ["serde/std", "byteorder/std"]
